--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
 
     <div class="container">
-      <div class="row">
-      <div class="border col-xl-4 bg-info "><p>Bloc 1</p></div>
-      <div class="border col-xl-4 bg-info "><p>Bloc 2</p></div>
-      <div class="border col-xl-4 bg-info"><p>Bloc 3</p></div>
+      <div class="row text-center text-white">
+      <div class="border col-md-4 bg-info "><p>Bloc 1</p></div>
+      <div class="border col-md-4 bg-info "><p>Bloc 2</p></div>
+      <div class="border col-md-4 bg-info"><p>Bloc 3</p></div>
       </div>
     </div>
       <div class="container">
-        <div class="row">
-          <div class="border col-xl-2 bg-danger "><p>Bloc 4</p></div>
-          <div class="border col-xl-2 bg-danger "><p>Bloc 5</p></div>
-          <div class="border col-xl-4 bg-danger "><p>Bloc 6</p></div>
-          <div class="border col-xl-4 bg-danger "><p>Bloc 7</p></div>
+        <div class="row text-center text-white">
+          <div class="border col-md-2 bg-danger "><p>Bloc 4</p></div>
+          <div class="border col-md-2 bg-danger "><p>Bloc 5</p></div>
+          <div class="border col-md-4 bg-danger "><p>Bloc 6</p></div>
+          <div class="border col-md-4 bg-danger "><p>Bloc 7</p></div>
         </div>
       </div>
   </body>
